...
        child: ListView(
          physics: BouncingScrollPhysics(),
          children: [
            Padding(
              padding: const EdgeInsets.all(8.0),
              child: TextFormField(
                key: Key('Name'),
                decoration: textInputDecoration.copyWith(
                  hintText: 'Event Name',
                  prefixIcon: Icon(Icons.event),
                ),
                validator: (val) => val!.isEmpty ? 'Enter an event name' : null,
                onChanged: (val) => setState(() { _name = val; }),
...
                      textAlign: TextAlign.center,
                      style: BOLDED_NORMAL
                    ),
                    subtitle: Padding(
                      padding: const EdgeInsets.all(8.0),
                      child: ElevatedButton(
                        key: Key('Date'),
                        child: Text(getDateText(_dateTime)),
                        onPressed: () { pickDate(context); },
                          style: ElevatedButton.styleFrom(
                            primary: ORANGE_1,
                            elevation: 10.0,
                          )
...
                      textAlign: TextAlign.center,
                      style: BOLDED_NORMAL
                    ),
                    subtitle: Padding(
                      padding: const EdgeInsets.all(8.0),
                      child: ElevatedButton(
                        key: Key('Time'),
                        child: Text(_getTimeText()),
                        onPressed: () { pickTime(context); },
                        style: ElevatedButton.styleFrom(
                          primary: ORANGE_1,
                          elevation: 10.0,
                        )
...
                ),
              ],
            ),
            Padding(
              padding: const EdgeInsets.all(8.0),
              child: TextFormField(
                key: Key('Description'),
                decoration: textInputDecoration.copyWith(hintText: 'Event Description'),
                validator: (val) => val!.isEmpty ? 'Enter an event description' : null,
                onChanged: (val) => setState(() { _description = val; }),
                maxLines: 4,
              ),
            ),
            Padding(
              padding: const EdgeInsets.all(8.0),
              child: TextFormField(
                key: Key('Telegram'),
                decoration: textInputDecoration.copyWith(
                  hintText: 'Telegram Chat URL',
                  prefixIcon: Icon(Icons.message)
                ),
                validator: (val) => val!.isNotEmpty && !val.startsWith('t.me/joinchat/')
                  ? 'Link should start with t.me/joinchat/ or be blank'
...
              ),
            ),
            Padding(
              padding: const EdgeInsets.symmetric(horizontal: 10.0, vertical: 7.5),
              child: Row(
                children: [
                  Text('Pax: ', style: BOLDED_NORMAL),
                  Padding(
                    padding: const EdgeInsets.only(left: 8.0),
                    child: DropdownButton(
                      key: Key('Pax'),
                      value: _pax,
                      items: numbers.map((x) => x + 2).map((pax) {
...
                  ),
                ],
              ),
            ),
            Padding(
              padding: const EdgeInsets.fromLTRB(10, 7.5, 10, 2.5),
              child: Text('Location: ', style: BOLDED_NORMAL),
            ),
            Padding(
              padding: const EdgeInsets.fromLTRB(10, 2.5, 10, 20),
              child: DropdownButton(
                key: Key('Location'),
                itemHeight: kMinInteractiveDimension,
...
                buildExpanded(3),
              ],
            ),
            Padding(
              padding: const EdgeInsets.all(50.0),
              child: FloatingActionButton(
                key: Key('floatingActionButton'),
                backgroundColor: ORANGE_1,
                focusColor: selectedColor,
                tooltip: 'Create Event',
                child: Icon(Icons.add, color: Colors.white),
                onPressed: () async {
                  if (_formKey.currentState!.validate()) {
...
                            child: Text("Cancel",
                                style: TextStyle(
                                  color: Colors.red,
                                )),
                          ),
                          TextButton(
                            key: Key('confirmButton'),
                            onPressed: () async {
                              _dateTime = DateTime(_dateTime.year, _dateTime.month,
                                  _dateTime.day, _time.hour, _time.minute);
                              String _uid = user!.uid;
                              DatabaseService db = DatabaseService(uid: _uid);
                              String eventID = await db.createEventData(
...
                                    ),
                                  )
                              );
                              // Go Back to Home Screen
                              widget.jumpToPage(0);
                            },
                            child: Text("Confirm"),
                          ),
                        ],
                      ),
                    );
                  }
                }
...
