...

// TODO: Update Icons here
// List of icons
const List<Image> IMAGE_LIST = [
  Image(image: AssetImage('assets/event_icons/Friends.png')),
  Image(image: AssetImage('assets/event_icons/Sports.png')),
  Image(image: AssetImage('assets/event_icons/Study.png'), key: Key('Study')),
  Image(image: AssetImage('assets/event_icons/food.png')),
  // Image(image: AssetImage('assets/event_icons/Cocktail Glass.png')),
];

const List<String> CATEGORIES = [
  'Social', 'Sports', 'Study', 'Food'
...
const List LOCATIONS = [
  ["Others", null, null],
  ["Dean's Office, FASS", 1.294312, 103.771062],
  ["Faculty of Engineering", 1.299187, 103.771312],
  ["NUS Alumni Relations", 1.293312, 103.773687],
  ["NUS Biological Sciences", 1.295562, 103.778688],
  ["NUS Business School", 1.292562, 103.774187],
  ["NUS Department of Chemistry", 1.296562, 103.778937],
  ["NUS Department of Chinese Studies", 1.295937, 103.772063],
  ["NUS Enterprise", 1.292438, 103.775688],
  ["NUS Environmental Research Institute", 1.299688, 103.772063],
  ["NUS Information Technology", 1.297563, 103.772562],
  ["NUS Office of Student Affairs", 1.298563, 103.774812],
...
